--- a/src/css/main.css
+++ b/src/css/main.css
@@ -31,3 +31,10 @@
     text-align: center;
     margin-bottom: 20px;
   }
+
+  .welcome-profile {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    margin-left: 20px;
+  }
